small header verbiage change - more to trigger a build as I am testing something
I changed my visibility in github regarding my membership.
I want to see if my visibility is required to launch an autobuild in
docker's hub.

--- a/search/Dockerfile
+++ b/search/Dockerfile
@@ -6,7 +6,7 @@
 #   The 6th Column Project, LLC / CodeWRX Software Stack                  *
 #                                                                         *
 #**************************************************************************
-#             Creates an Ubuntu 14 based image for Publisher              *
+#             Creates an Ubuntu 14 based image for Search                 *
 #                                                                         *
 #                                  ##        .                            *
 #                            ## ## ##       ==                            *
