--- a/search/config/elasticsearch.yml
+++ b/search/config/elasticsearch.yml
@@ -209,7 +209,7 @@ path.logs: /container_data/log
 
 # Set both 'bind_host' and 'publish_host':
 #
-network.host: 192.168.0.1
+#network.host: 192.168.0.1
 
 # Set a custom port for the node to node communication (9300 by default):
 #
