change order to speed build

--- a/publisher/Dockerfile
+++ b/publisher/Dockerfile
@@ -85,10 +85,12 @@ RUN pip install elasticsearch
 #prepare env
 ADD env /env
 
+#this is a workaround for python can be improved if the rest works as planned
+RUN mkdir /.python-eggs && chmod 777 /.python-eggs
+
 #prepare the scripts
 ADD scripts /scripts
 
-RUN mkdir /.python-eggs && chmod 777 /.python-eggs
 #ENV CONTAINER_DATA /container_data
 
 #9200  elastic search
